Add transformations to shelf using panel

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./client.bundle?platform=vr"></script>
     <script>
       React360.init(
-        'index.bundle?platform=vr&dev=true',
+        'index.bundle?platform=vr',
         document.getElementById('container')
       );
     </script>
